# Quark-File-Manager

./: .codacy.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
src/: main.cpp
